# chat_gtp_bot

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/: chat_bot.py  chat_gpt.py
tests/: test_chat_bot.py  test_chat_gpt.py
