[tool.poetry]
name = "chat-gpt-bot"
version = "0.1.0"
description = ""
authors = ["Victor Rafael <victorsls@outlook.com>"]
readme = "README.md"
packages = [{include = "chat_gpt_bot"}]
[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
black = "^23.3.0"
autoflake = "^2.1.1"
pytest = "^7.3.1"

[tool.poetry.dependencies]
python = "3.11.1"
openai = "^0.27.7"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
